--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,8 +12,18 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
+    "scripts": {
+    "clean": "rimraf dist build .next node_modules/.cache",
+    "dev": "npm run clean && vite",
+    "build": "npm run clean && vite build",
+    "preview": "npm run clean && vite preview"
+  },
   "devDependencies": {
-    "vite": "^5.3.4",
-    "@vitejs/plugin-react": "^4.3.1"
+    "@vitejs/plugin-react": "^4.3.1",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
+    "rimraf": "^6.0.1",
+    "tailwindcss": "^3.4.17",
+    "vite": "^5.3.4"
   }
 }
